--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ align-items: center;
 }
 .additemsinput{
   width: 500px;
-  height: 30px;
+  height: 25px;
   border: 1px solid grey;
 }
 
@@ -84,4 +84,101 @@ align-items: center;
 .Links:hover{
   color:#5ba5eb;
   opacity: 0.9;
+}
+
+/* SIGN IN / SIGN OUT */
+
+.Sign_up_section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.Sign_up_div{
+  border: 2px solid #5ba5eb;
+
+  height: 500px;
+  width: 400px;
+  border-radius: 10%;
+}
+
+.sign_up{
+  width: 300px;
+  height: 30px;
+  border: 2px solid lightgray;;
+  margin-bottom: 10px;
+ 
+  border-radius: 10%;
+}
+#signupsubmit{
+  width: 250px;
+}
+.Sign_up_section form p{
+  font-size: 10px;
+}
+
+/* ITEMS  */
+.items_areas{
+  width: 100%;
+  margin-left: 5px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+}
+
+.item_card{
+display: flex;
+flex-direction: column; 
+width: 425px;
+border: 2px solid black;
+justify-content: center;
+margin-bottom: 25px;
+max-width: 700px;
+
+
+}
+.item_card h3{
+  text-align: center;
+  margin: 0;
+}
+.item_image{
+  width:100%;
+  
+  
+}
+.Item_info{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.card-descriptions{
+  width: 50%;
+}
+.card-descriptions li{
+  list-style: none;
+  flex-direction: column;
+  flex-wrap: wrap;
+  
+}
+.card-h3{
+  font-family: 'Lacquer', system-ui;
+}
+.button_area{
+  display: flex;
+  justify-content:space-around;
+}
+.item_button{
+  width: 100px;
+  text-align:center;
+  height: 30px;
+  border: 1px solid grey;
+  background-color: #5ba5eb;
+  color: white;
+  border-radius: 9%;
+  
+  
 }
